Avoid wrapping

--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -23,6 +23,7 @@
   margin: 0 auto;
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
+  white-space: nowrap;
   .site-title {
     font-size: 50px;
     display: block;
